[gd_scene load_steps=9 format=2]

[ext_resource path="res://global/Global.gd" type="Script" id=1]
[ext_resource path="res://entities/mobs/Monster.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menus/MenuBtns.gd" type="Script" id=3]
[ext_resource path="res://ui/fonts/FonteTrevosaBtns.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/fonts/FonteTrevosa.tres" type="DynamicFont" id=5]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://control/commander/Commander.tscn" type="PackedScene" id=7]
[ext_resource path="res://control/camera/Camera.tscn" type="PackedScene" id=8]


[node name="Tutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="Monsters" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 5.72021, -211.641 )

[node name="Ally" parent="Monsters" instance=ExtResource( 2 )]
position = Vector2( 382.049, 129.508 )
health_max = 200
friend = true

[node name="Ally_2" parent="Monsters" instance=ExtResource( 2 )]
position = Vector2( 265.492, -440.328 )
friend = true

[node name="Ally_3" parent="Monsters" instance=ExtResource( 2 )]
position = Vector2( 334.563, -440.328 )
friend = true

[node name="Enemy" parent="Monsters" instance=ExtResource( 2 )]
position = Vector2( 649.699, -138.142 )

[node name="Enemy_2" parent="Monsters" instance=ExtResource( 2 )]
position = Vector2( 544.496, -1558.79 )

[node name="Enemy_3" parent="Monsters" instance=ExtResource( 2 )]
position = Vector2( 1550.14, -1027.92 )

[node name="Enemy_4" parent="Monsters" instance=ExtResource( 2 )]
position = Vector2( -619.975, -1005.26 )

[node name="UI" type="Node2D" parent="."]
position = Vector2( 5.72021, -211.641 )

[node name="MainMenuBtn" type="MarginContainer" parent="UI"]
margin_left = 440.102
margin_top = -1700.55
margin_right = 640.102
margin_bottom = -1660.55

[node name="MenuBtn" type="Button" parent="UI/MainMenuBtn"]
editor/display_folded = true
margin_right = 200.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="UI/MainMenuBtn/MenuBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Main Menu"
align = 1
valign = 1

[node name="MainMenuBtn_2" type="MarginContainer" parent="UI"]
margin_left = 1450.56
margin_top = -1174.44
margin_right = 1650.56
margin_bottom = -1134.44

[node name="MenuBtn" type="Button" parent="UI/MainMenuBtn_2"]
editor/display_folded = true
margin_right = 200.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="UI/MainMenuBtn_2/MenuBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Main Menu"
align = 1
valign = 1

[node name="MainMenuBtn_3" type="MarginContainer" parent="UI"]
margin_left = -713.997
margin_top = -1154.39
margin_right = -513.997
margin_bottom = -1114.39

[node name="MenuBtn" type="Button" parent="UI/MainMenuBtn_3"]
editor/display_folded = true
margin_right = 200.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="UI/MainMenuBtn_3/MenuBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Main Menu"
align = 1
valign = 1

[node name="Congrats" type="Node2D" parent="UI"]
editor/display_folded = true

[node name="Congrats" type="MarginContainer" parent="UI/Congrats"]
margin_left = 338.527
margin_top = -1661.72
margin_right = 746.527
margin_bottom = -1621.72

[node name="Label" type="Label" parent="UI/Congrats/Congrats"]
margin_top = 10.0
margin_right = 407.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "You've somewhat remembered how your power works."
align = 1

[node name="Go" type="MarginContainer" parent="UI/Congrats"]
margin_left = 320.351
margin_top = -1636.73
margin_right = 727.351
margin_bottom = -1596.73

[node name="Label" type="Label" parent="UI/Congrats/Go"]
margin_top = 10.0
margin_right = 407.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Go get your crypt back!"
align = 1

[node name="Congrats_2" type="Node2D" parent="UI"]
editor/display_folded = true
position = Vector2( 1026.06, 533.099 )

[node name="Congrats" type="MarginContainer" parent="UI/Congrats_2"]
margin_left = 338.527
margin_top = -1661.72
margin_right = 746.527
margin_bottom = -1621.72

[node name="Label" type="Label" parent="UI/Congrats_2/Congrats"]
margin_top = 10.0
margin_right = 407.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "You've somewhat remembered how your power works."
align = 1

[node name="Go" type="MarginContainer" parent="UI/Congrats_2"]
margin_left = 320.351
margin_top = -1636.73
margin_right = 727.351
margin_bottom = -1596.73

[node name="Label" type="Label" parent="UI/Congrats_2/Go"]
margin_top = 10.0
margin_right = 407.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Go get your crypt back!"
align = 1

[node name="Congrats_3" type="Node2D" parent="UI"]
editor/display_folded = true
position = Vector2( -1133.63, 552.571 )

[node name="Congrats" type="MarginContainer" parent="UI/Congrats_3"]
margin_left = 338.527
margin_top = -1661.72
margin_right = 746.527
margin_bottom = -1621.72

[node name="Label" type="Label" parent="UI/Congrats_3/Congrats"]
margin_top = 10.0
margin_right = 407.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "You've somewhat remembered how your power works."
align = 1

[node name="Go" type="MarginContainer" parent="UI/Congrats_3"]
margin_left = 320.351
margin_top = -1636.73
margin_right = 727.351
margin_bottom = -1596.73

[node name="Label" type="Label" parent="UI/Congrats_3/Go"]
margin_top = 10.0
margin_right = 407.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Go get your crypt back!"
align = 1

[node name="UnlockCamera" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 327.167
margin_top = -791.521
margin_right = 735.167
margin_bottom = -751.521

[node name="Label" type="Label" parent="UI/UnlockCamera"]
margin_top = 10.0
margin_right = 408.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Lock or Unlock your camera with [Y]"
align = 1

[node name="UnlockCamera_2" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 327.167
margin_top = -765.674
margin_right = 735.167
margin_bottom = -725.674

[node name="Label" type="Label" parent="UI/UnlockCamera_2"]
margin_top = 10.0
margin_right = 408.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "You can see to great distances without moving your feeble body"
align = 1

[node name="EnemySearch" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 324.027
margin_top = -734.096
margin_right = 732.027
margin_bottom = -694.096

[node name="Label" type="Label" parent="UI/EnemySearch"]
margin_right = 407.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 5 )
text = "Just [MOVE THE MOUSE WITH CAMERA UNLOCKED]
Try looking for enemies"
align = 1

[node name="MultipleSelection" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 100.978
margin_top = -563.329
margin_right = 508.978
margin_bottom = -522.329

[node name="Label" type="Label" parent="UI/MultipleSelection"]
margin_right = 408.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 5 )
text = "[LEFT CLICK AND DRAG] or [SHIFT AND DRAG]
This way you can select multiple allies"
align = 1

[node name="MultipleSelection_2" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 10.9329
margin_top = -518.311
margin_right = 616.933
margin_bottom = -477.311

[node name="Label" type="Label" parent="UI/MultipleSelection_2"]
margin_right = 606.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 5 )
text = "Remember: you can always press [MIDDLE CLICK]
or [BACKSPACE] to make your troops stand by"
align = 1

[node name="GoNorth_3" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 413.584
margin_top = -380.599
margin_right = 634.584
margin_bottom = -340.599

[node name="Label" type="Label" parent="UI/GoNorth_3"]
margin_top = 10.0
margin_right = 220.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Keep going"
align = 1

[node name="RightClickToNecromance" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 468.976
margin_top = -207.226
margin_right = 844.976
margin_bottom = -167.226

[node name="Label" type="Label" parent="UI/RightClickToNecromance"]
margin_top = 10.0
margin_right = 452.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "When an enemy dies, [RIGHT CLICK] or [CTRL] the corpse to Necromance"
align = 1

[node name="Combat" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 480.105
margin_top = -239.198
margin_right = 827.105
margin_bottom = -199.198

[node name="Label" type="Label" parent="UI/Combat"]
margin_top = 10.0
margin_right = 367.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "When an unit is selected, [RIGHT CLICK] to send it to battle"
align = 1

[node name="GoNorth_2" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 386.927
margin_top = -40.2078
margin_right = 607.927
margin_bottom = -0.207825

[node name="Label" type="Label" parent="UI/GoNorth_2"]
margin_top = 10.0
margin_right = 221.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Take him north"
align = 1

[node name="Selection" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 276.063
margin_top = 34.6776
margin_right = 497.063
margin_bottom = 74.6776

[node name="Label" type="Label" parent="UI/Selection"]
margin_top = 10.0
margin_right = 221.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "[LEFT CLICK] or [SHIFT] to select"
align = 1

[node name="UnitMovement" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 257.724
margin_top = 63.5507
margin_right = 523.724
margin_bottom = 103.551

[node name="Label" type="Label" parent="UI/UnitMovement"]
margin_top = 10.0
margin_right = 330.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "[RIGHT CLICK] or [CTRL] to make selected units move"
align = 1

[node name="GoNorth" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 394.1
margin_top = 302.0
margin_right = 615.1
margin_bottom = 342.0

[node name="Label" type="Label" parent="UI/GoNorth"]
margin_right = 220.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 5 )
text = "Go north
"
align = 1

[node name="Movement" type="MarginContainer" parent="UI"]
editor/display_folded = true
margin_left = 378.707
margin_top = 374.758
margin_right = 629.707
margin_bottom = 414.758

[node name="Label" type="Label" parent="UI/Movement"]
margin_top = 10.0
margin_right = 250.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Use [ARROWS] or [WASD KEYS] to move"
align = 1
__meta__ = {
"_edit_group_": true
}

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 516.739, 282.976 )

[node name="Commander" parent="." instance=ExtResource( 7 )]

[node name="Camera" parent="." instance=ExtResource( 8 )]
position = Vector2( 512, 300 )

[connection signal="pressed" from="UI/MainMenuBtn/MenuBtn" to="UI/MainMenuBtn/MenuBtn" method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="UI/MainMenuBtn_2/MenuBtn" to="UI/MainMenuBtn_2/MenuBtn" method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="UI/MainMenuBtn_3/MenuBtn" to="UI/MainMenuBtn_3/MenuBtn" method="_on_MenuBtn_pressed"]
